# hifiberry-vu

./: ACOUSTID_README.md  LICENSE  MANIFEST.in  README.md  activate-on-local-login  analog_clock.py  detect_song.py  direct_fb_circle.py  example_acoustid.py  fps_benchmark.py  generate_vinyl_frames.py  install-dependencies  main.py  main_framebuffer.py  pygame_circle.py  pyproject.toml  python_vu.py  requirements.txt  run.sh  run_circle.sh  run_vinyl.sh  sdl2_example.py  setup.py  test_song_detection.py  test_vu_modes.py  vinyl_png_player.py  vinyl_simple.py  vinyl_ultra_fast.py  vu_meter.py
hifiberry_vu/: __init__.py  acoustid.py  python_vu.py  vu_meter.py
sdl2/: README.md  install-sdl2  test-sdl2.py
