[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hifiberry-vu"
dynamic = ["version"]
description = "SDL2-based VU meter display with real-time audio monitoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HiFiBerry", email = "support@hifiberry.com"}
]
maintainers = [
    {name = "HiFiBerry", email = "support@hifiberry.com"}
]
keywords = ["audio", "vu-meter", "sdl2", "alsa", "raspberry-pi", "hifiberry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Hardware",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"
dependencies = [
    "pysdl2",
    "pyaudio",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/hifiberry/hifiberry-vu"
Repository = "https://github.com/hifiberry/hifiberry-vu"
"Bug Reports" = "https://github.com/hifiberry/hifiberry-vu/issues"
Documentation = "https://github.com/hifiberry/hifiberry-vu/blob/main/README.md"

[project.scripts]
hifiberry-vu = "hifiberry_vu.vu_meter:main"
vu-meter = "hifiberry_vu.vu_meter:main"

[tool.setuptools.dynamic]
version = {attr = "hifiberry_vu.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["hifiberry_vu*"]

[tool.setuptools.package-data]
"*" = ["../img/*.png"]